--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "preact": "^10.16.0",
     "preact-async-route": "^2.2.1",
     "preact-render-to-string": "^6.3.0",
-    "preact-router": "^4.1.2"
+    "preact-router": "^4.1.2",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
@@ -37,7 +38,6 @@
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "typescript": "^5.0.2"
   }
 }
