--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# VITE_API_HOST=https://api.stardestroyer.ru
-VITE_API_HOST=http://localhost:3007
+VITE_API_HOST=https://api.protector174.ru
+# VITE_API_HOST=http://localhost:3007
+API_HOST=http://api:3000
 
